--- a/templates/index.html
+++ b/templates/index.html
@@ -309,9 +309,10 @@
                 <a href="{{ url_for('form_predict') }}" class="btn btn-light btn-lg">
                     <i class="fas fa-edit me-2"></i>Make Prediction
                 </a>
-                <a href="{{ url_for('predict') }}" class="btn btn-outline-light btn-lg">
-                    <i class="fas fa-upload me-2"></i>Upload CSV
+                <a href="{{ url_for('dashboard') }}" class="btn btn-lg">
+                    <i class="fas fa-edit me-2"></i>Dashboard
                 </a>
+             
                 {% else %}
                 <a href="{{ url_for('register') }}" class="btn btn-light btn-lg">
                     <i class="fas fa-rocket me-2"></i>Get Started Free
