--- a/templates/base.html
+++ b/templates/base.html
@@ -268,13 +268,13 @@
                         </li>
                         {% if current_user.is_authenticated %}
                         <li class="nav-item">
-                            <a class="nav-link {% if request.endpoint == 'predict' %}active{% endif %}" href="{{ url_for('predict') }}">
-                                <i class="fas fa-upload me-1"></i>Upload CSV
+                            <a class="nav-link {% if request.endpoint == 'form_predict' %}active{% endif %}" href="{{ url_for('form_predict') }}">
+                                <i class="fas fa-edit me-1"></i>Manual Input
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link {% if request.endpoint == 'form_predict' %}active{% endif %}" href="{{ url_for('form_predict') }}">
-                                <i class="fas fa-edit me-1"></i>Manual Input
+                            <a class="nav-link {% if request.endpoint == 'dashboard' %}active{% endif %}" href="{{ url_for('dashboard') }}">
+                                <i class="fas fa-chart-bar me-1"></i>Dashboard
                             </a>
                         </li>
                         <li class="nav-item">
